--- a/src/style/components/menu.scss
+++ b/src/style/components/menu.scss
@@ -1,8 +1,12 @@
 .menu {
+  position:  fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   background-color: $menu-bg-color;
+  z-index: 500;
 
   .left {
     display: flex;
