--- a/src/style/components/sidebar.scss
+++ b/src/style/components/sidebar.scss
@@ -1,9 +1,9 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   z-index: 600;
-  height: 100%;
+  height: 100vh;
   width: 60vw;
   background-color: $bg-color;
   box-shadow: -1px 0 0 1px rgba(0, 0, 0, .25);  
