--- a/src/style/pages/home.scss
+++ b/src/style/pages/home.scss
@@ -19,17 +19,18 @@
       width: 100%;
       height: auto;
       position: relative;
-      top: 50%;
-      left: 50%;
-      transform:translateY(-50%) translateX(-50%);
+      top: 0;
+      left: 0;
       opacity: 0.3;
     }
 
     .title {
       position: absolute;
-      bottom: 10px;
+      bottom: 0;
       width: 100%;
       margin: 0 auto;
+      padding: 1rem;
+      background-color: $bg-color-dark;
       text-align: center;
       font-size: 2.1rem;
       text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
