--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,14 +1,14 @@
-$color: #1A202C;
+$color: #fff;
 $accent-color: #2B6CB0;
-$bg-color: #E2E8F0;
+$bg-color: #2D3748;
 $bg-color-dark: #1A202C;
 
-$title-background-color: #2B6CB0;
+$title-background-color: $accent-color;
 
 $menu-color: #718096;
-$menu-bg-color: #F7FAFC;
+$menu-bg-color: #1A202C;
 $menu-item-color: $accent-color;
-$menu-item-hover-color: #2A4365;
+$menu-item-hover-color: #90CDF4;
 
 $card-width: 154px;
 $card-height: 231px;
