--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,5 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Contrail+One&display=swap');
-
 $font-family: 'Noto Sans', sans-serif;
-$title-font-family: 'Contrail One', cursive;
+$title-font-family: 'Oswald', sans-serif;
