--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,10 +4,11 @@
 @import "./colors.scss";
 
 @import "./components/menu.scss";
+@import "./components/list.scss";
 @import "./components/card.scss";
 @import "./components/sidebar.scss";
 
-@import "./pages/home.scss";
+// @import "./pages/home.scss";
 
 body {
   background-color: $bg-color;
