--- a/src/style/components/menu.scss
+++ b/src/style/components/menu.scss
@@ -43,7 +43,7 @@
       border-bottom: 4px solid transparent;
       font-weight: bolder;
 
-      
+      &.active,
       &:hover {
         color: $menu-item-hover-color;
         font-weight: bolder;
