--- a/src/style/components/sidebar.scss
+++ b/src/style/components/sidebar.scss
@@ -24,12 +24,12 @@
 
     .closeBtn {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 10px;
+      left: 10px;
       border: none;
       background-color: transparent;
       fill: white;
-      font-size: 2rem;
+      font-size: 2.2rem;
       z-index: 1000;
 
       &:hover {
@@ -87,6 +87,7 @@
       margin: 1rem;
 
       .contentDescription {
+        margin: 1rem;
         color:  white;
         font-size: 1.1rem;
         line-height: 1.6rem;
@@ -103,6 +104,53 @@
 
         > * {
           margin: 1rem;
+        }
+      }
+    }
+  
+    .footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin-top: 3rem;
+
+      .btn {
+
+        &.liked {
+          fill: #E53E3E;
+          color: #E53E3E;
+          border-color: #E53E3E;
+
+          &:hover {
+            background-color: #E53E3E;
+            color: white;
+            fill: white;
+          }
+        }
+
+        display: flex;
+        justify-content: center;
+        align-items: center;        
+        margin: 0;
+        padding: .6rem 1rem;
+        border: 0;
+        fill: $accent-color;
+        color: $accent-color;
+        background-color: transparent;
+        border: 1px solid $accent-color;
+        font-size: 1.6rem;
+        border-radius: $card-border-radius;
+
+        &:hover {
+          background-color: $accent-color;
+          color: white;
+          fill: white;
+        }
+
+        .hint {
+          margin-left: 0.4rem;
+          font-size: 1rem;
         }
       }
     }
