--- a/src/style/components/sidebar.scss
+++ b/src/style/components/sidebar.scss
@@ -3,12 +3,12 @@
   top: 0;
   right: 0;
   z-index: 600;
-  height: 100vh;
+  height: 100%;
   width: 42vw;
   background-color: $bg-color-dark;
   box-shadow: -1px 0 0 1px rgba(0, 0, 0, .25);
   transition: all ease .2s;
-  
+
   &.hidden {
     transform: scaleX(0);
     transform-origin: right
@@ -93,17 +93,23 @@
         line-height: 1.6rem;
       }
 
-      .contentInfo {
+      .contentInfoWrapper {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-around;
         align-items: center;
-        font-size: 1.1rem;
-        line-height: 1.6rem;
-        color: white;
-        fill: white;
 
-        > * {
-          margin: 1rem;
+        .contentInfo {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          font-size: 1.1rem;
+          line-height: 1.6rem;
+          color: white;
+          fill: white;
+
+          > * {
+            margin: 1rem;
+          }
         }
       }
     }
@@ -132,7 +138,7 @@
         display: flex;
         justify-content: center;
         align-items: center;        
-        margin: 0;
+        margin: 0 1rem;
         padding: .6rem 1rem;
         border: 0;
         fill: $accent-color;
@@ -141,6 +147,7 @@
         border: 1px solid $accent-color;
         font-size: 1.6rem;
         border-radius: $card-border-radius;
+        text-decoration: none;
 
         &:hover {
           background-color: $accent-color;
