--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,7 +8,7 @@
 @import "./components/card.scss";
 @import "./components/sidebar.scss";
 
-// @import "./pages/home.scss";
+@import "./pages/moviesSeries.scss";
 
 body {
   background-color: $bg-color;
