--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,6 +9,7 @@
 @import "./components/sidebar.scss";
 
 @import "./pages/moviesSeries.scss";
+@import "./pages/about.scss";
 
 body {
   background-color: $bg-color;
