--- a/src/style/pages/moviesSeries.scss
+++ b/src/style/pages/moviesSeries.scss
@@ -4,7 +4,7 @@
     width: 100%;
     max-height: 300px;
     overflow: hidden;
-    
+
     .backdrop {
       width: 100%;
       height: auto;
@@ -23,7 +23,7 @@
       align-items: center;
       width: 100%;
       height: 300px;
-      
+
       .poster {
         width: 140px;
         margin: 1rem;
@@ -44,16 +44,16 @@
       }
 
       .btn {
-
         &.liked {
-          fill: #E53E3E;
-          color: #E53E3E;
-          border-color: #E53E3E;
+          fill: #e53e3e;
+          color: #e53e3e;
+          border-color: #e53e3e;
 
           &:hover {
-            background-color: #E53E3E;
+            background-color: #e53e3e;
             color: white;
             fill: white;
+            cursor: pointer;
           }
         }
 
@@ -62,11 +62,11 @@
         right: 20px;
         display: flex;
         justify-content: center;
-        align-items: center;        
+        align-items: center;
         width: 64px;
         height: 64px;
         margin: 0 1rem;
-        padding: .6rem 1rem;
+        padding: 0.6rem 1rem;
         border: 0;
         fill: $accent-color;
         color: $accent-color;
@@ -80,6 +80,7 @@
           background-color: $accent-color;
           color: white;
           fill: white;
+          cursor: pointer;
         }
 
         .hint {
@@ -100,7 +101,7 @@
 
     .contentDescription {
       margin: 1rem;
-      color:  white;
+      color: white;
       font-size: 1.1rem;
       line-height: 1.6rem;
     }
@@ -128,7 +129,7 @@
     .cast {
       display: flex;
       overflow-y: auto;
-      
+
       .castItem {
         position: relative;
         margin: 0.5rem;
@@ -149,7 +150,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
           }
         }
 
@@ -159,7 +160,7 @@
           font-family: $title-font-family;
 
           .character {
-            font-size: .8rem;
+            font-size: 0.8rem;
           }
 
           .name {
@@ -174,7 +175,7 @@
       margin: 1rem;
 
       .review {
-        padding: .6rem 1rem;
+        padding: 0.6rem 1rem;
         border-radius: 12px;
         background-color: $bg-color-dark;
 
@@ -186,7 +187,7 @@
         .reviewAuthor {
           font-family: $title-font-family;
           color: $accent-color;
-          font-size: .8rem;
+          font-size: 0.8rem;
         }
       }
     }
@@ -194,7 +195,7 @@
     .videos {
       display: flex;
       justify-content: flex-start;
-      
+
       .video {
         margin: 1rem;
       }
